# LomiEngine

./: CMakeLists.txt  README.md
include/LomiEngine/: Engine.h  Physics.h  Renderer.h
include/LomiEngine/editor/: Editor.h
src/: CMakeLists.txt  Engine.cpp  Physics.cpp  Renderer.cpp  main.cpp
src/editor/: CMakeLists.txt  Editor.cpp
